--- a/public/index.html
+++ b/public/index.html
@@ -15,41 +15,20 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Youtube Music Playlist Downloader</h1>
-      <p>Save and Download your Youtube Music playlist </p>
-      <p>Save a clone of your youtube music playlist.</p>
-      <p>Downlod songs in the playlist in mp3 format.</p>
     </div>
-    <div class="form-group">
-      <label for="cookyt">Paste your YT Music cookie value here:</label>
-      <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
-      <div class="btn-group btn-group-lg">
-        <button type="button" class="btn btn-primary">Get Playlist</button>
-      </div>
-      <br>
+    <!-- Input View -->
+    <div id="cookie-info-view">
+      <label for="cookie-value">Paste your YT Music cookie value here:</label>
+      <textarea rows="5" cols="10" id="cookie-value" name="text"></textarea>
     </div>
-    <div class="table-responsive">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Thumbnail</th>
-            <th>Song</th>
-            <th>Artist</th>
-            <th>Length</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Anna</td>
-            <td>Pitt</td>
-            <td>35</td>
-            <td>New York</td>
-          </tr>
-        </tbody>
-      </table>
+    <!-- Action View -->
+    <div id="action-view">
+      <button type="button" class="btn btn-primary">Get Playlist</button>
+    </div>
+    <!-- Output View -->
+    <div id="result-view">
+      <textarea rows="5" cols="10" id="result" name="text" disabled></textarea>
     </div>
   </div>
 </body>
-
 </html>
