--- a/public/index.html
+++ b/public/index.html
@@ -17,17 +17,20 @@
       <h1>Youtube Music Playlist Downloader</h1>
     </div>
     <!-- Input View -->
-    <div id="cookie-info-view">
-      <label for="cookie-value">Paste your YT Music cookie value here:</label>
-      <textarea rows="5" cols="10" id="cookie-value" name="text"></textarea>
+    <div id="input-view">
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Example textarea</label>
+          <textarea style="background-color: black; color:antiquewhite;" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
-    <!-- Action View -->
-    <div id="action-view">
-      <button type="button" class="btn btn-primary">Get Playlist</button>
+    <!-- Status View -->
+    <div id="status-view">
     </div>
     <!-- Output View -->
-    <div id="result-view">
-      <textarea rows="5" cols="10" id="result" name="text" disabled></textarea>
+    <div id="output-view">
     </div>
   </div>
 </body>
